[gd_scene load_steps=7 format=3 uid="uid://c2mighhrl7kan"]

[ext_resource type="Script" uid="uid://bt6xncm2a8kd2" path="res://scripts/player.gd" id="1_o8aas"]
[ext_resource type="Texture2D" uid="uid://bsenxjtwq76gu" path="res://assets/walker.png" id="2_o8aas"]
[ext_resource type="Texture2D" uid="uid://cixikty4b5o3g" path="res://assets/terrain/stamina_bar_outline.png" id="3_hrjfh"]
[ext_resource type="Texture2D" uid="uid://dlmxi7q686lq7" path="res://assets/terrain/stamina_bar_filled.png" id="4_qpk4w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 14.0
height = 43.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqkch"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_o8aas")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
radius = 15.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_g2els")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_o8aas")
hframes = 6
frame = 5

[node name="SprintTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="SprintCDTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HarvestArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HarvestArea"]
shape = SubResource("CapsuleShape2D_dqkch")
one_way_collision_margin = 35.0

[node name="SprintBar" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(60, 6)
offset_left = -20.0
offset_top = -36.0
offset_right = 40.0
offset_bottom = -30.0
max_value = 1.0
step = 0.01
texture_under = ExtResource("3_hrjfh")
texture_progress = ExtResource("4_qpk4w")
